# ek80

./: .editorconfig  .gitignore  Explore.ipynb  README.md  TODO.md  calc_missing_sv.py  calc_mvbs.py  calc_sv.py  combine_depths.py  convert_missing.py  convert_raw.py  depth_csv.py  depth_sqlite.py  detect_bottom.py  netcdf_combiner.py  netcdf_converter.py  plot_from_sv.py  plot_mvbs.py  pyproject.toml  raw_to_zarr.py  requirements.txt  subsample.ipynb  upload_to_s3.sh  uploader.py  utilities.py  zarr_combiner.py  zarr_to_sv.py
